[main-private] threads count check added